Replace Firebase config with new project settings
Updated Firebase configuration with new project details.

--- a/index.html
+++ b/index.html
@@ -552,15 +552,17 @@ word-break: break-all;
   // ║  Get it from console.firebase.google.com                ║
   // ║  Project Settings → Your Apps → Web App → Config        ║
   // ╚══════════════════════════════════════════════════════════╝
-  const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_PROJECT.firebaseapp.com",
-    databaseURL: "https://YOUR_PROJECT-default-rtdb.firebaseio.com",
-    projectId: "YOUR_PROJECT",
-    storageBucket: "YOUR_PROJECT.appspot.com",
-    messagingSenderId: "YOUR_SENDER_ID",
-    appId: "YOUR_APP_ID"
-  };
+  // Import the functions you need from the SDKs you need
+
+// Your web app's Firebase configuration
+const firebaseConfig = {
+  apiKey: "AIzaSyAh-GBElMhJbXGftr9IUTHmk4LYAlkAPfE",
+  authDomain: "disney-world-passport-game.firebaseapp.com",
+  projectId: "disney-world-passport-game",
+  storageBucket: "disney-world-passport-game.firebasestorage.app",
+  messagingSenderId: "134143307824",
+  appId: "1:134143307824:web:a12ede396c472decce7df5"
+};
 
   const app = initializeApp(firebaseConfig);
   const db = getDatabase(app);
