--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@ body::before {
 const firebaseConfig = {
   apiKey: "AIzaSyAh-GBElMhJbXGftr9IUTHmk4LYAlkAPfE",
   authDomain: "disney-world-passport-game.firebaseapp.com",
+  databaseURL: "https://disney-world-passport-game-default-rtdb.firebaseio.com",
   projectId: "disney-world-passport-game",
   storageBucket: "disney-world-passport-game.firebasestorage.app",
   messagingSenderId: "134143307824",
