Update Firebase config with new project credentials
Updated Firebase configuration with new project details.

--- a/index.html
+++ b/index.html
@@ -535,13 +535,13 @@ body::before {
 
 <script>
 const firebaseConfig = {
-  apiKey:            "YOUR_API_KEY",
-  authDomain:        "YOUR_PROJECT.firebaseapp.com",
-  databaseURL:       "https://YOUR_PROJECT-default-rtdb.firebaseio.com",
-  projectId:         "YOUR_PROJECT",
-  storageBucket:     "YOUR_PROJECT.appspot.com",
-  messagingSenderId: "YOUR_SENDER_ID",
-  appId:             "YOUR_APP_ID"
+  apiKey: "AIzaSyAh-GBElMhJbXGftr9IUTHmk4LYAlkAPfE",
+  authDomain: "disney-world-passport-game.firebaseapp.com",
+  databaseURL: "https://disney-world-passport-game-default-rtdb.firebaseio.com",
+  projectId: "disney-world-passport-game",
+  storageBucket: "disney-world-passport-game.firebasestorage.app",
+  messagingSenderId: "134143307824",
+  appId: "1:134143307824:web:a12ede396c472decce7df5"
 };
 
 var db        = null;
